--- a/bibliogradle/bibliogradle/build.gradle
+++ b/bibliogradle/bibliogradle/build.gradle
@@ -18,7 +18,7 @@ dependencies {
     runtimeOnly("ch.qos.logback:logback-classic:1.5.18")
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
-
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
 test {
