--- a/bibliogradle/bibliogradle/build.gradle
+++ b/bibliogradle/bibliogradle/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version ('3.5.3')
     id 'io.spring.dependency-management' version('1.1.7')
+    id 'jacoco'
 }
 
 group = 'edu.itplus.bibliosping'
@@ -22,4 +23,13 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    reports {
+        xml.required = false
+        csv.required = false
+        html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
+    }
 }
